fix styling on Safari

--- a/css/style.less
+++ b/css/style.less
@@ -343,6 +343,10 @@ nav {
 
 		&.layer-0 {
 			top: 50%;
+			-webkit-transform: translateY(-50%);
+			-moz-transform: translateY(-50%);
+			-ms-transform: translateY(-50%);
+			-o-transform: translateY(-50%);
 			transform: translateY(-50%);
 		}
 
